--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	
-	
+
+
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.stackroute</groupId>
@@ -25,14 +26,6 @@
 	<modules>
 		<module>config-service</module>
 		<module>eureka-server</module>
-		<module>user-service</module>
 		<module>zuul-apigateway</module>
-		<module>experience-microservice</module>
-                <module>location-microservice</module>
-                <module>project-microservice</module>
-                <module>personalinformation-microservice</module>
-                <module>training-microservice</module>
-		<module>skill-microservice</module>
-                
-       </modules>
+	</modules>
 </project>
