--- a/zuul-apigateway/src/main/resources/bootstrap.properties
+++ b/zuul-apigateway/src/main/resources/bootstrap.properties
@@ -9,8 +9,8 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 server.port=8092
-zuul.routes.restaurant.url=http://localhost:8080 
-zuul.routes.user.url=http://localhost:8081 
+#zuul.routes.restaurant.url=http://localhost:8080 
+#zuul.routes.user.url=http://localhost:8081 
 
 #ribbon.eureka.enabled=false
 
