--- a/user-profile/src/main/resources/application.properties
+++ b/user-profile/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.data.mongodb.database=userprofile
-spring.data.mongodb.host=localhost
-spring.data.mongodb.password=admin123
+spring.data.mongodb.host=172.23.238.187
+spring.data.mongodb.password=
 spring.data.mongodb.port=27017
-spring.data.mongodb.uri=mongodb://localhost/userprofile
-spring.data.mongodb.username=admin
+spring.data.mongodb.uri=mongodb://172.23.238.187/userprofile
+spring.data.mongodb.username=
 server.port= 8070
 spring.application.name=userprofile
-#spring.cloud.config.uri=http://localhost:8898
