--- a/zuul-apigateway/src/main/resources/bootstrap.properties
+++ b/zuul-apigateway/src/main/resources/bootstrap.properties
@@ -1,19 +1,7 @@
-#spring.application.name=api-gateway
-#spring.profiles.active=default
-#spring.cloud.config.uri=http://localhost:8891
-
-spring.cloud.config.server.git.uri=https://github.com/ximanta/spring-microservices-config-settings
-
-eureka.client.service-url.defaultZone=http://localhost:9090/eureka
+spring.cloud.config.server.git.uri=https://github.com/sumanth-1405/godeliver-cloud-config.git
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-server.port=8092
-zuul.routes.restaurant.url=http://localhost:8080 
-zuul.routes.user.url=http://localhost:8081 
-
-#ribbon.eureka.enabled=false
-
-spring.application.name=api-gateway   
-
-
+server.port=8080
+spring.application.name=api-gateway
