--- a/GoDeliverFrontEnd/package.json
+++ b/GoDeliverFrontEnd/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "^6.1.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
     "multiple-checkboxes": "0.0.6",
+    "ngx-webstorage": "^2.0.1",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
@@ -33,7 +35,8 @@
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/jquery": "^3.3.6",
+    "@types/node": "^8.9.5",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
