--- a/GoDeliverFrontEnd/package.json
+++ b/GoDeliverFrontEnd/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
+    "mdbootstrap": "^4.5.9",
     "multiple-checkboxes": "0.0.6",
     "ngx-webstorage": "^2.0.1",
     "rxjs": "^6.0.0",
