--- a/book-service/src/main/resources/application.properties
+++ b/book-service/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-#server.port=8070
-#spring.data.mongodb.database=booksdb
-#spring.data.mongodb.host=172.23.238.176
-#spring.data.mongodb.password=
-#spring.data.mongodb.port=27017
-#spring.data.mongodb.uri=mongodb://172.23.238.176/booksdb
-#spring.data.mongodb.username=
+server.port=8888
+spring.data.mongodb.database=booksdb
+spring.data.mongodb.host=localhost
+spring.data.mongodb.password=
+spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb://localhost/booksdb
+spring.data.mongodb.username=
 
-server.port= 8888
-spring.application.name=book
-spring.cloud.config.uri=http://localhost:8891
+#server.port= 8888
+#spring.application.name=book
+#spring.cloud.config.uri=http://localhost:8891
