--- a/user-profile/pom.xml
+++ b/user-profile/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.stackroute</groupId>
-	<artifactId>capgemini-w1-godeliver</artifactId>
+	<artifactId>user-profile</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
