edited user login

--- a/user-login/src/main/resources/application.properties
+++ b/user-login/src/main/resources/application.properties
@@ -20,4 +20,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/go_d?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 spring.application.name=user-login
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-uri.defaultzone=http://8761/eureka
+
 
