--- a/user-profile/src/main/resources/application.properties
+++ b/user-profile/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 
 server.port=8070
-spring.application.name=userprofile
-spring.cloud.config.uri=http://localhost:8891
 
+
+spring.data.mongodb.database=userprofile
+spring.data.mongodb.host=localhost
+spring.data.mongodb.password=
+spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb://localhost/userprofile
+spring.data.mongodb.username=
