--- a/recommendation/src/main/resources/application.properties
+++ b/recommendation/src/main/resources/application.properties
@@ -2,5 +2,5 @@
 #debug: true
 spring.data.neo4j.username = neo4j
 spring.data.neo4j.password = maths@369
-#server.port:8888
+server.port:8092
 #spring.cloud.config.uri=http://localhost:8888?useSSL=false
