--- a/user-login/src/main/resources/application.properties
+++ b/user-login/src/main/resources/application.properties
@@ -1,21 +1,4 @@
-#server port= 8082
-#spring:
-#  datasource:
-#    url: jdbc:mysql://localhost:3306/go_d?useSSL=false
-#    username: root
-#    password: 
-#  jpa:
-#    show-sql: true
-#    hibernate:
-#      ddl-auto: create-drop
-#      naming:
-#        strategy: org.hibernate.cfg.ImprovedNamingStrategy
-#    properties:
-#      hibernate:
-#        dialect: org.hibernate.dialect.MySQL5Dialect
-      
- server.port=8082
- spring.jpa.hibernate.ddl-auto=create
+server.port=8082
 spring.datasource.url=jdbc:mysql://localhost:3306/go_d?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
@@ -23,5 +6,9 @@ spring.application.name=user-login
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.service-uri.defaultzone=http://8761/eureka
+ spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
 
 
