--- a/user-login/src/main/resources/application.yml
+++ b/user-login/src/main/resources/application.yml
@@ -1,15 +1,22 @@
-port: 8080
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/go_d?useSSL=false
-    username: root
-    password: Root@123
-  jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: create-drop
-      naming:
-        strategy: org.hibernate.cfg.ImprovedNamingStrategy
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL5Dialect
+ application:
+   name: user-login
+ datasource:
+   url: jdbc:mysql://localhost:3306/go_d?useSSL=false
+   username: root
+   password: 
+   driver-class-name: com.mysql.jdbc.Driver
+ jpa:
+   hibernate:
+     ddl-auto: create
+   database-platform: org.hibernate.dialect.MySQL5Dialect
+   generate-ddl: "true"
+   show-sql: "true"
+server:
+ port: "8082"
+eureka:
+ client:
+   register-with-eureka: "true"
+   fetch-registry: "true"
+   serviceUrl:
+     defaultZone: http://localhost:8761/eureka/
