--- a/recommendation/src/main/resources/application.properties
+++ b/recommendation/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.data.neo4j.username = neo4j
-spring.data.neo4j.password = maths@369
+spring.data.neo4j.password = root123
 server.port:8092
 
