--- a/user-profile/src/main/resources/application.properties
+++ b/user-profile/src/main/resources/application.properties
@@ -4,7 +4,10 @@ server.port=8070
 
 spring.data.mongodb.database=userprofile
 spring.data.mongodb.host=localhost
-spring.data.mongodb.password=
+spring.data.mongodb.password=root123
 spring.data.mongodb.port=27017
 spring.data.mongodb.uri=mongodb://localhost/userprofile
 spring.data.mongodb.username=
+
+spring.application.name=userprofile
+#spring.cloud.config.uri=http://localhost:8891
