--- a/book-service/src/main/resources/application.properties
+++ b/book-service/src/main/resources/application.properties
@@ -6,6 +6,6 @@
 #spring.data.mongodb.uri=mongodb://localhost/booksdb
 #spring.data.mongodb.username=
 
-server.port= 8888
-spring.application.name=book
-spring.cloud.config.uri=http://localhost:8891
+#server.port= 8888
+#spring.application.name=book
+#spring.cloud.config.uri=http://localhost:8891
