--- a/user-login/src/main/resources/application.yml
+++ b/user-login/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
  application:
    name: user-login
  datasource:
-   url: jdbc:mysql://localhost:3306/go_d?useSSL=false
+   url: jdbc:mysql://user-sql:3306/go_d?useSSL=false
    username: root
    password: 
    driver-class-name: com.mysql.jdbc.Driver
