--- a/zuul-apigateway/src/main/resources/application.properties
+++ b/zuul-apigateway/src/main/resources/application.properties
@@ -1,9 +1,3 @@
-#server.port=8092
-#zuul.routes.restaurant.url=http://localhost:8080 
-#zuul.routes.user.url=http://localhost:8081 
-#ribbon.eureka.enabled=false
-#spring.application.name=api-gateway   
-# eureka.client.service-url.defaultZone=http://localhost:9090/eureka
-# eureka.client.register-with-eureka=true
-# eureka.client.fetch-registry=true
-
+server.port=8080
+spring.application.name=api-gateway
+spring.cloud.config.server.git.uri=http://localhost:8891
