--- a/zuul-apigateway/src/main/resources/bootstrap.properties
+++ b/zuul-apigateway/src/main/resources/bootstrap.properties
@@ -1,7 +1,8 @@
-spring.cloud.config.server.git.uri=https://github.com/sumanth-1405/godeliver-cloud-config.git
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
+#spring.cloud.config.server.git.uri=https://github.com/sumanth-1405/godeliver-cloud-config.git
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+#eureka.client.register-with-eureka=true
+#eureka.client.fetch-registry=true
 
 server.port=8080
 spring.application.name=api-gateway
+spring.cloud.config.uri=http://localhost:8891
