--- a/GoDeliverFrontEnd/package.json
+++ b/GoDeliverFrontEnd/package.json
@@ -24,10 +24,15 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "angular-carousel": "^1.1.0",
+    "angular-firebase": "^1.1.4",
+    "angularfire2": "^5.0.0-rc.12",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "firebase": "^5.4.1",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
+    "materialize-css": "^0.100.2",
     "mdbootstrap": "^4.5.9",
     "multiple-checkboxes": "0.0.6",
     "ngx-webstorage": "^2.0.1",
