--- a/zuul-apigateway/src/main/resources/application.properties
+++ b/zuul-apigateway/src/main/resources/application.properties
@@ -1,3 +1,16 @@
 server.port=8080
+spring.cloud.config.uri= http://configserver:8891
+
 spring.application.name=api-gateway
-spring.cloud.config.server.git.uri=http://localhost:8891
+
+
+zuul.routes.userprofile.url=http://localhost:8070
+zuul.routes.book.url=http://localhost:8888
+zuul.routes.user-login.url=http://localhost:8082
+zuul.routes.recommendation.url=http://localhost:8092
+
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
