--- a/user-profile/src/main/resources/application.properties
+++ b/user-profile/src/main/resources/application.properties
@@ -6,7 +6,6 @@ spring.application.name=userprofile
 server.port= 8070
 spring.data.mongodb.database=userprofile
 spring.data.mongodb.host=localhost
-spring.data.mongodb.password=
 spring.data.mongodb.port=27017
 spring.data.mongodb.uri=mongodb://localhost/userprofile
 spring.data.mongodb.username=
@@ -14,4 +13,4 @@ spring.data.mongodb.username=
 #eureka properties
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.service-uri.defaultzone=http://eureka:8761/eureka
+eureka.client.service-url.defaultZone=http://eureka:8761/eureka
