--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,61 +80,61 @@ services:
 
   
 
-#  user-login:
-#
-#   build: user-login/
-#
-#   container_name: user-login-docker
-#
-#   depends_on:
-#
-#    - mysql
-#
-#   healthcheck:
-#
-#    test: exit 0
-#
-#   hostname: localhost
-#
-#   image: login
-#
-#   network_mode: host
-#
-#   ports:
-#
-#    - 8082:8082
-#
-#   restart: always
-#
-#
-#
-#  mysql:
-#
-#   container_name: mysql-docker
-#
-#   image: mysql:5.5
-#
-#   ports:
-#
-#    - 3306:3306
-#
-#   network_mode: host
-#
-#   hostname: localhost
-#
-#   environment:
-#
-#    MYSQL_ROOT_PASSWORD: root
-#
-#    MYSQL_DATABASE: go_d
-#
-#    MYSQL_PASSWORD: 
-#
-#   healthcheck:
-#
-#    test: exit 0
-#
-#
+  user-login:
+
+   build: user-login/
+
+   container_name: user-login-docker
+
+   depends_on:
+
+    - mysql
+
+   healthcheck:
+
+    test: exit 0
+
+   hostname: localhost
+
+   image: login
+
+   network_mode: host
+
+   ports:
+
+    - 8082:8082
+
+   restart: always
+
+
+
+  mysql:
+
+   container_name: mysql-docker
+
+   image: mysql:5.5
+
+   ports:
+
+    - 3306:3306
+
+   network_mode: host
+
+   hostname: localhost
+
+   environment:
+
+    MYSQL_ROOT_PASSWORD: root
+
+    MYSQL_DATABASE: go_d
+
+    MYSQL_PASSWORD: 
+
+   healthcheck:
+
+    test: exit 0
+
+
 
   book-service:
   
