--- a/user-profile/src/main/resources/application.properties
+++ b/user-profile/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.data.mongodb.username=
 #eureka properties
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://8761/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
