changed to config server

--- a/user-profile/src/main/resources/bootstrap.properties
+++ b/user-profile/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
-#spring.cloud.config.uri= http://configserver:8891
+spring.cloud.config.uri= http://localhost:8891
 #server properties
-#spring.application.name=userprofile
+spring.application.name=userprofile
 #
 #mongo properties
 #server.port= 8070
