--- a/recommendation/bin/src/main/resources/application.properties
+++ b/recommendation/bin/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.data.neo4j.username = neo4j
-spring.data.neo4j.password = maths@369
-spring.data.neo4j.uri=bolt://172.23.238.172
+spring.data.neo4j.password = root123
+spring.data.neo4j.uri=bolt://localhost
 server.port:8092
 spring.application.name=recommendation
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
