--- a/recommendation/src/main/resources/bootstrap.properties
+++ b/recommendation/src/main/resources/bootstrap.properties
@@ -1,7 +1,9 @@
-spring.data.neo4j.username = neo4j
-spring.data.neo4j.password = maths@369
-spring.data.neo4j.uri=bolt://172.23.238.172
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-#spring.cloud.config.server.git.uri=https://github.com/stackroute/capgemini-w1-godeliver/config-service/src/main/resources/recommendation.properties 
+#spring.data.neo4j.username = neo4j
+#spring.data.neo4j.password = root123
+#spring.data.neo4j.uri=bolt://localhost
+#server.port=8092
+spring.application.name=recommendation
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+#eureka.client.register-with-eureka=true
+#eureka.client.fetch-registry=true
+spring.cloud.config.uri= http://localhost:8891
