--- a/user-login/bin/Dockerfile
+++ b/user-login/bin/Dockerfile
@@ -4,7 +4,7 @@ FROM java:8-jre
 # copy jar file to docker file system
 ADD ./target/user-login-0.0.1-SNAPSHOT.jar /usr/app/user-login-0.0.1-SNAPSHOT.jar
 
-Expose 8082
+EXPOSE 8082
 
 # java -jar <jar file name>
 WORKDIR usr/app
