--- a/user-login/src/main/resources/application.yml
+++ b/user-login/src/main/resources/application.yml
@@ -1,23 +1,23 @@
 server:
   port: "8082"
-spring:
-  application:
-    name: user-login
-  datasource:
-    url: jdbc:mysql://localhost:3306/go_d?useSSL=false
-    username: root
-    password: 
-    driver-class-name: com.mysql.jdbc.Driver
-  jpa:
-    hibernate:
-      ddl-auto: create
-    database-platform: org.hibernate.dialect.MySQL5Dialect
-    generate-ddl: "true"
-    show-sql: "true"
-eureka:
-  client:
-    register-with-eureka: "true"
-    fetch-registry: "true"
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+#spring:
+#  application:
+#    name: user-login
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/go_d?useSSL=false
+#    username: root
+#    password: 
+#    driver-class-name: com.mysql.jdbc.Driver
+#  jpa:
+#    hibernate:
+#      ddl-auto: create
+#    database-platform: org.hibernate.dialect.MySQL5Dialect
+#    generate-ddl: "true"
+#    show-sql: "true"
+#eureka:
+#  client:
+#    register-with-eureka: "true"
+#    fetch-registry: "true"
+#    serviceUrl:
+#      defaultZone: http://localhost:8761/eureka
 
