--- a/eureka-server/src/main/resources/bootstrap.properties
+++ b/eureka-server/src/main/resources/bootstrap.properties
@@ -4,4 +4,4 @@ eureka.client.fetch-registry=false
 spring.application.name=EurekaServer
 logging.level.com.netflix.eureka=OFF
 logging.level.com.netflix.discovery=OFF
-
+management.endpoints.web.exposure.include=*
