--- a/logistics-service/src/main/resources/bootstrap.properties
+++ b/logistics-service/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 #application related
 server.port= 8086
-spring.application.name: logistics
+spring.application.name= logistics
 
 #mongo properties
 spring.data.mongodb.host=localhost
