--- a/user-login/src/main/resources/application.yml
+++ b/user-login/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
   port: "8082"
-#spring:
-#  application:
-#    name: user-login
+spring:
+  application:
+    name: user-login
 #  datasource:
 #    url: jdbc:mysql://localhost:3306/go_d?useSSL=false
 #    username: root
