--- a/user-login/src/main/resources/bootstrap.properties
+++ b/user-login/src/main/resources/bootstrap.properties
@@ -1,7 +1,8 @@
 spring.cloud.config.uri= http://localhost:8891
 
-#server.port= 8082
+server.port= 8082
 spring.application.name= user-login
+
 #spring.datasource.url= jdbc:mysql://localhost:3306/go_d?useSSL=false
 #spring.datasource.username= root
 #spring.datasource.password= root
