--- a/logistics-service/pom.xml
+++ b/logistics-service/pom.xml
@@ -13,10 +13,10 @@
 	<description>Logistics Micro service</description>
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.4.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<groupId>com.stackroute</groupId>
+		<artifactId>capgemini-w1-godeliver-test</artifactId>
+		<version>1.0.0</version>
+		<!--<relativePath /> --><!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
