--- a/recommendation/pom.xml
+++ b/recommendation/pom.xml
@@ -10,13 +10,13 @@
 	<packaging>jar</packaging>
 
 	<name>recommendation</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Recommendations microservice</description>
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.4.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<groupId>com.stackroute</groupId>
+		<artifactId>capgemini-w1-godeliver-test</artifactId>
+		<version>1.0.0</version>
+		<!-- <relativePath /> --> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
