changes in kafka config

--- a/order-details/src/main/resources/bootstarp.properties
+++ b/order-details/src/main/resources/bootstarp.properties
@@ -3,6 +3,8 @@ spring.cloud.config.uri= http://localhost:8891
 
 spring.application.name=order
 
+server.port=8081
+
 #spring.data.mongodb.database=orderdetails
 #spring.data.mongodb.host=localhost
 #spring.data.mongodb.port=27017
