--- a/user-profile/src/main/resources/bootstrap.properties
+++ b/user-profile/src/main/resources/bootstrap.properties
@@ -1,6 +1,10 @@
 spring.cloud.config.uri= http://localhost:8891
+
 #server properties
+server.port=8070
+
 spring.application.name=userprofile
+
 #
 #mongo properties
 #server.port= 8070
