--- a/recommendation/src/main/resources/bootstrap.properties
+++ b/recommendation/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 server.port:8092
 spring.application.name=recommendation
-spring.cloud.config.uri= http://configserver:8891
+spring.cloud.config.uri= http://localhost:8891
 
 #spring.data.neo4j.username = neo4j
 #spring.data.neo4j.password = maths@369
