--- a/zuul-apigateway/src/main/resources/bootstrap.properties
+++ b/zuul-apigateway/src/main/resources/bootstrap.properties
@@ -1,4 +1,7 @@
-spring.cloud.config.uri= http://configserver:8891
+spring.cloud.config.uri= http://localhost:8891
+
+server.port=8080
+
 spring.application.name=api-gateway
 
 
