changes in properties

--- a/book-service/src/main/resources/bootstrap.properties
+++ b/book-service/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 server.port=8888
 
-spring.cloud.config.uri=http://localhost:8891
+spring.cloud.config.uri=http://172.23.239.100:8891
 spring.application.name=book
 
 #spring.data.mongodb.database=booksdb
