--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.cloud.config.server.git.force-pull= true
 spring.application.name= config-server
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://172.23.239.100:8761/eureka
 management.endpoints.web.exposure.include=*
