--- a/logistics-service/src/main/resources/bootstrap.properties
+++ b/logistics-service/src/main/resources/bootstrap.properties
@@ -3,7 +3,7 @@ server.port= 8086
 
 spring.application.name= logistics
 
-spring.cloud.config.uri= http://localhost:8891
+spring.cloud.config.uri= http://172.23.239.100:8891
 
 #mongo properties
 #spring.data.mongodb.host=localhost
