--- a/order-details/src/main/resources/bootstarp.properties
+++ b/order-details/src/main/resources/bootstarp.properties
@@ -1,5 +1,5 @@
 
-spring.cloud.config.uri= http://localhost:8891
+spring.cloud.config.uri= http://172.23.239.100:8891
 
 spring.application.name=order
 
