--- a/logistics-service/src/main/resources/bootstrap.yml
+++ b/logistics-service/src/main/resources/bootstrap.yml
@@ -1,9 +1,13 @@
 #application related
-server.port= 8086
+server:
+  port: "8086"
 
-spring.application.name= logistics
-
-spring.cloud.config.uri= http://172.23.239.100:8891
+spring:
+  application:
+    name: logistics
+  cloud:
+    config:
+      uri: http://172.23.239.100:8891
 
 #mongo properties
 #spring.data.mongodb.host=localhost
