--- a/recommendation/src/main/resources/bootstrap.yml
+++ b/recommendation/src/main/resources/bootstrap.yml
@@ -1,6 +1,11 @@
-server.port:8092
-spring.application.name=recommendation
-spring.cloud.config.uri= http://172.23.239.100:8891
+server:
+  port: "8092"
+spring:
+  application:
+    name: recommendation
+  cloud:
+    config:
+      uri: http://172.23.239.100:8891
 
 #spring.data.neo4j.username = neo4j
 #spring.data.neo4j.password = maths@369
