--- a/user-login/src/main/resources/bootstrap.yml
+++ b/user-login/src/main/resources/bootstrap.yml
@@ -1,8 +1,12 @@
-spring.cloud.config.uri= http://172.23.239.100:8891
+server:
+  port: "8082"
 
-server.port= 8082
-
-spring.application.name= user-login
+spring:
+  application:
+    name: user-login
+  cloud:
+    config:
+      uri: http://172.23.239.100:8891
 
 #spring.datasource.url= jdbc:mysql://localhost:3306/go_d?useSSL=false
 #spring.datasource.username= root
