--- a/zuul-apigateway/src/main/resources/bootstrap.yml
+++ b/zuul-apigateway/src/main/resources/bootstrap.yml
@@ -1,8 +1,13 @@
-spring.cloud.config.uri= http://172.23.239.100:8891
+server:
+  port: "8080"
 
-server.port=8080
-
-spring.application.name=api-gateway
+spring:
+  application:
+    name: api-gateway
+  cloud:
+    config:
+      uri: http://172.23.239.100:8891
+  
 
 
 #zuul.routes.userprofile.url=http://localhost:8070
