Order Details:Docker file changed

--- a/order-details/Dockerfile
+++ b/order-details/Dockerfile
@@ -4,7 +4,7 @@ FROM java:8-jre
 
 # copy jar file to docker file system
 
-ADD ./target/Order-details-0.0.1-SNAPSHOT.jar /usr/app/Order-details-0.0.1-SNAPSHOT.jar
+ADD ./target/order-details-0.0.1-SNAPSHOT.jar /usr/app/order-details-0.0.1-SNAPSHOT.jar
 
 # java -jar <jar fileName>
 
@@ -12,4 +12,4 @@ EXPOSE 8081
 
 WORKDIR usr/app
 
-ENTRYPOINT ["java","-jar", "Order-details-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java","-jar", "order-details-0.0.1-SNAPSHOT.jar"]
