--- a/logistics-service/src/main/resources/bootstrap.yml
+++ b/logistics-service/src/main/resources/bootstrap.yml
@@ -4,7 +4,7 @@ server:
 
 spring:
   application:
-    name: logistics
+    name: logistics-ms
   cloud:
     config:
       uri: http://172.23.239.100:8891
