registered in parent pom

--- a/pom.xml
+++ b/pom.xml
@@ -32,5 +32,6 @@
 		<module>book-service</module>
 		<module>logistics-service</module>
 		<module>order-details</module>
+		<module>payment-service</module>
 	</modules>
 </project>
