added cvrp in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -141,7 +141,6 @@ services:
 
 
 
-
   user-profile:
   
    build: user-profile/
@@ -167,6 +166,7 @@ services:
     test: "exit 0"
 
 
+
   payment-service:
   
    build: payment-service/
@@ -186,6 +186,29 @@ services:
    healthcheck:
 
     test: "exit 0"
+
+
+
+  cvrp-service:
+  
+   build: cvrp-service/
+   
+   image: cvrp-service
+
+   restart: always
+
+   network_mode: host
+
+   container_name: cvrp-service
+
+   ports:
+
+    - 8084:8084
+
+   healthcheck:
+
+    test: "exit 0"
+
 
 
   Order-details:
