--- a/prometheus.yml
+++ b/prometheus.yml
@@ -8,11 +8,11 @@ scrape_configs:
  
   - job_name: 'prometheus'
     static_configs:
-    - targets: ['172.23.239.49:9090']
+    - targets: ['localhost:9090']
 
   - job_name: 'grafana'
     static_configs:
-      - targets: ['172.23.239.49:3000']
+      - targets: ['localhost:3000']
 
   - job_name: 'eureka-server'
     metrics_path: '/actuator/prometheus'
@@ -72,10 +72,10 @@ scrape_configs:
     metrics_path: '/actuator/prometheus'
     scrape_interval: 5s
     static_configs:
-    - targets: ['172.23.239.123:8086']
+    - targets: ['172.23.239.123:9091']
 
   - job_name: 'cvrp-service'
     metrics_path: '/actuator/prometheus'
     scrape_interval: 5s
     static_configs:
-    - targets: ['172.23.239.123:8086']
+    - targets: ['172.23.239.123:8084']
